--- a/_data/stimuli.yml
+++ b/_data/stimuli.yml
@@ -55,3 +55,11 @@
   type: experiment
   page: visual_search
 
+- title: Multiple object tracking
+  type: experiment
+  page: mot
+  references :
+  - title: "Miller, G. A. (1956). The magical number seven, plus or minus two: Some limits on our capacity for processing information. Psychological Review, 63(2), 81–97"
+    doi: 10.1037/h0043158
+  - title: "Green, C., Bavelier, D. (2003) Action video game modifies visual selective attention. Nature 423, 534–537."
+    doi: 10.1038/nature01647
